# LibIGL

./: .gitignore  README.md
cli/: CMakeLists.txt  DartConfiguration.tcl  test_igl_core_include-b12d07c.cmake  test_igl_cycodebase_include-b12d07c.cmake  update_main.py
cli/1001_LipschitzOctree/: README.md  main.cpp
cli/1002_EytzingerAABB/: README.md  main.cpp
cli/1003_WindingNumber2D/: README.md  main.cpp
cli/1004_SplineDistance/: README.md  main.cpp
cli/1005_GeodesicVoronoiDiagram/: main.cpp
cli/1006_RandomRotate/: main.cpp
cli/101_FileIO/: README.md  main.cpp
cli/102_DrawMesh/: README.md  main.cpp
cli/103_Events/: README.md  main.cpp
cli/104_Colors/: README.md  main.cpp
cli/105_Overlays/: README.md  main.cpp
cli/106_ViewerMenu/: README.md  main.cpp
cli/107_MultipleMeshes/: README.md  main.cpp
cli/108_MultipleViews/: README.md  main.cpp
cli/109_ImGuizmo/: README.md  main.cpp
cli/110_MshView/: README.md  main.cpp
cli/111_MatCap/: README.md  main.cpp
cli/112_Selection/: README.md  main.cpp
cli/113_Shadows/: README.md  main.cpp
cli/114_CustomShader/: README.md  main.cpp
cli/201_Normals/: README.md  main.cpp
cli/202_GaussianCurvature/: README.md  main.cpp
cli/203_CurvatureDirections/: README.md  main.cpp
cli/204_Gradient/: README.md  main.cpp
cli/205_Laplacian/: README.md  main.cpp
cli/206_GeodesicDistance/: README.md  main.cpp
cli/207_PolygonLaplacian/: README.md  main.cpp
cli/301_Slice/: README.md  main.cpp
cli/302_Sort/: README.md  main.cpp
cli/303_LaplaceEquation/: README.md  main.cpp
cli/304_LinearEqualityConstraints/: README.md  main.cpp
cli/305_QuadraticProgramming/: README.md  main.cpp
cli/306_EigenDecomposition/: README.md  main.cpp
cli/401_BiharmonicDeformation/: README.md  main.cpp
cli/402_PolyharmonicDeformation/: README.md  main.cpp
cli/403_BoundedBiharmonicWeights/: README.md  main.cpp
cli/404_DualQuaternionSkinning/: README.md  main.cpp
cli/405_AsRigidAsPossible/: README.md  main.cpp
cli/406_FastAutomaticSkinningTransformations/: README.md  main.cpp
cli/407_BiharmonicCoordinates/: README.md  main.cpp
cli/408_DirectDeltaMush/: README.md  main.cpp
cli/409_Kelvinlets/: README.md  main.cpp
cli/501_HarmonicParam/: README.md  main.cpp
cli/502_LSCMParam/: README.md  main.cpp
cli/503_ARAPParam/: README.md  main.cpp
cli/504_Planarization/: README.md  main.cpp  test_quad.off
cli/601_Serialization/: README.md  main.cpp
cli/602_Matlab/: README.md  main.cpp
cli/603_MEX/: README.md  readOBJ_mex.cpp
cli/604_Triangle/: README.md  main.cpp
cli/605_Tetgen/: README.md  main.cpp
cli/606_AmbientOcclusion/: README.md  main.cpp
cli/607_ScreenCapture/: README.md  main.cpp
cli/608_RayTrace/: README.md  main.cpp
cli/609_Boolean/: README.md  main.cpp
cli/610_CSGTree/: README.md  main.cpp
cli/701_Statistics/: README.md  main.cpp
cli/702_WindingNumber/: README.md  main.cpp
cli/703_Decimation/: README.md  main.cpp
cli/704_SignedDistance/: README.md  main.cpp
cli/705_MarchingCubes/: README.md  main.cpp
cli/706_FacetOrientation/: README.md  main.cpp
cli/707_SweptVolume/: README.md  main.cpp
cli/708_Picking/: README.md  main.cpp
cli/709_SLIM/: README.md  main.cpp
cli/710_SCAF/: README.md  main.cpp
cli/801_Subdivision/: README.md  main.cpp
cli/802_DataSmoothing/: README.md  main.cpp
cli/803_ShapeUp/: README.md  main.cpp
cli/804_MarchingTets/: README.md  main.cpp
cli/805_MeshImplicitFunction/: README.md  main.cpp
cli/806_HeatGeodesics/: README.md  main.cpp
cli/806_HeatGeodesics_CLI/: main.cpp
cli/807_FastWindingNumber/: README.md  main.cpp
cli/808_IterativeClosestPoint/: README.md  main.cpp
cli/809_ExplodedView/: README.md  main.cpp
cli/810_BlueNoise/: README.md  main.cpp
cli/901_VectorFieldSmoothing/: README.md  main.cpp
cli/902_VectorParallelTransport/: README.md  main.cpp
cli/903_FastFindSelfIntersections/: README.md  main.cpp
cli/904_FastFindIntersections/: README.md  main.cpp
cli/905_Isolines/: README.md  main.cpp
cli/906_TrimWithSolid/: README.md  main.cpp
cli/907_DynamicAABB/: README.md  main.cpp
cli/908_IntersectionBlockingDecimation/: README.md  main.cpp
cli/909_BatchMarchingCubes/: README.md  main.cpp
cli/910_OrientedBoundingBox/: README.md  main.cpp
cmake/igl/: igl_add_tutorial.cmake
docs/: UserGuide.md
include/igl/: exact_geodesic.cpp  exact_geodesic.h
